flux-clusters/piserver/apps/keyboard-proxy/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-keyboard-proxy
  namespace: external-keyboard
subsets:
  - addresses:
      - ip: 192.168.2.101
    ports:
      - port: 7865
