flux-clusters/piserver/apps/keyboard-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-keyboard-proxy
  namespace: keyboard-proxy
spec:
  ports:
    - port: 7865
      targetPort: 7865
